# minecraft-cpp

./: .gitignore  ARCHITECTURE.md  BRANCH_GUIDE.md  BUILD_GUIDE.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  settings.ini  setup_glad.bat  setup_glad.sh
assets/: README.txt
assets/models/Player/: license.txt
assets/models/Zombie/: license.txt
shaders/: block.frag  block.vert  clouds.frag  clouds.vert  composite.frag  model.frag  model.vert  shadow.vert  ssao.frag  ssao_blur.frag  stars.frag  stars.vert  sun.frag  sun.vert  taa.frag  volumetric.frag  water.frag  water.vert
src/: main.cpp
src/Core/: Logger.cpp  Logger.h  Settings.h  ThreadPool.cpp  ThreadPool.h  Time.cpp  Time.h  Window.cpp  Window.h
src/Entity/: Entity.cpp  Entity.h  PlayerEntity.cpp  PlayerEntity.h  ZombieEntity.cpp  ZombieEntity.h
src/Math/: Ray.cpp  Ray.h
src/Mesh/: Mesh.cpp  Mesh.h  MeshBuilder.cpp  MeshBuilder.h  Vertex.h
src/Model/: Model.cpp  Model.h
src/Render/: Camera.cpp  Camera.h  FrameBuffer.cpp  FrameBuffer.h  Frustum.cpp  Frustum.h  GPUBufferAllocator.cpp  GPUBufferAllocator.h  PostProcess.cpp  PostProcess.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  Texture.cpp  Texture.h
src/UI/: UIManager.cpp  UIManager.h
src/Util/: Config.h  Types.h
src/World/: Block.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  WorldGenerator.cpp  WorldGenerator.h  WorldSerializer.cpp  WorldSerializer.h
